# vgr_sdk

./: .gitignore  Guide.md  README.md  Structure.md  pyproject.toml  requirements.txt  setup.cfg
config/: robot.yaml  topics.yaml  vision_geom copy.yaml  vision_geom.yaml  vision_geom.yaml.bak
config/tasks/: bin_picking_2d.yaml  cnc_tending.yaml  kitting.yaml  sorting.yaml
heal/: backend.py  driver_smoke_test.py  home_heal.py  open_gripper.py  teleopheal.py
heal/driver_ui/: index.html
launch/: vgr_sdk.launch
poses/: DAG_HOME.yaml  cube.yaml  cylinder.yaml  down.yaml  driver_test last.yaml  driver_test.yaml  pick_place_cylinder.yaml  recorded_poses.yaml  ring-refuel.yaml  temp.yaml
schemas/: vision_result.schema.json
scripts/: calibrate.py  driver_smoke_test.py  gripper_node.py  ping_trigger_vision.py  plan_executor_node.py  pose_recorder_node.py  trigger_client.py  ui.py  vgr_manager_node.py  vision_bridge_node.py  ws_ros_bridge.py
scripts/driver_ui/: index.html
src/utils/: joint_teleop_heal.py
src/utils/TRAJECTORY_PLANNERS/: trajectory_planners.py
src/vgr_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vgr_sdk/core/: filters.py  gripper.py  message_types.py  planner.py  pose_store.py  robot_io.py  transform.py  utils.py  vision_ingest.py
src/vgr_sdk/drivers/: gripper_addverb_backend.py  robot_velocity_backend.py
src/vgr_sdk/nodes/: vgr_manager.py  vision_bridge.py
src/vgr_sdk/tasks/: base_task.py  bin_pick2d_task.py  cnc_tending_task.py  kitting_task.py  sorting_task.py
tests/: test_pose_store.py  test_px2mm.py  test_task_selection.py
utils/TRAJECTORY_PLANNERS/: __init__.py
