[metadata]
name = vgr_sdk
version = 0.1.0
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src
exclude =
    tests
    scripts

[tool:pytest]
addopts = -q --disable-warnings
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
